--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">And Why It Matters</p>
+                <p class="masthead-subheading font-weight-light mb-0">Accessibility to healthcare in the disabled community is a rising issue. Some doctors have refused to treat people with disabilities due to their lack of ability. Doctors have not been trained to work with a diverse demographic. It is time to properly train these doctors and physicians. People with disabilities deserve the same care as any other person.</p>
             </div>
         </header>
         <!-- Portfolio Section-->
