--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <div class="row justify-content-center">
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
+                    <div class="col-sm"><p>Contact Alex Bocchi for more infomation on inequality for people with disabilities in medicine</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                 </div>
