--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
+                    <div class="col-sm"><p> Brodric Mulvihill x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
