--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Title of First Image</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">What is Disability Discrimination?</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
