--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="https://twitter.com/DisabledAdvice"></i></a>
 
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/jobs/view/3370221451 "><i class="fab fa-fw fa-linkedin-in"></i></a>
                     </div>
                 </div>
             </div>
