--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <div class="col-lg mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Organizations</h4>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/groups/1406139906351001/?ref=share&mibextid=S66gvF "><i class="fab fa-fw fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/DisabCommunity"><i class="fab fa-fw fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/jobs/view/3370221451"><i class="fab fa-fw fa-linkedin-in"></i></a>
                     </div>
                 </div>
