--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
                         <a class="btn btn-outline-light btn-social mx-1" href="#https://www.facebook.com/groups/1406139906351001/?ref=share&mibextid=S66gvF!"><i class="fab fa-fw fa-facebook-f"></i></a>
 
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="https://twitter.com/DisabledAdvice"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/DisabCommunity"><i class="https://twitter.com/DisabledAdvice"></i></a>
 
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/jobs/view/3370221451"><i class="fab fa-fw fa-linkedin-in"></i></a>
                     </div>
