--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
+                    <div class="col-sm"><p>Contact Dayton Rose for more infomation on twitter, and information on videos and pictures. x</p></div>
                 </div>
             </div>
         </section>
