--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </section>
         <!-- About Section-->
         <section class="page-section bg-primary text-white mb-0" id="about">
-            <div class="container">
+            <div class="While this issue might not affect you directly, it's affecting people around you. Take a step back and recognize your privilege; are you able to walk into a doctors office and receive care? That is a privilege. People in the disabled community do not have the opportunity or accessibility to receive proper treatment. From a very young age I have worked with kids apart of the disabled community. It has truly changed my life. I have learned so much over the years. There are multiple stereotypes in the disabled community. Even in a school setting they are treated differently. Most of them have a para with them, walking them everywhere. Not only that, but they have their own classrooms and their own electives. This excludes them from ever having a normal high school experience. They are not able to develop friendships when they are isolated. This eventually leads to misconceptions about the disabled community.People look down on them, misjudge them, and discriminate against them. This is just as promante in our healthcare system. Doctors have denied care to people with disabilities before due to their own insecurities and lack of training. This is why we are fighting for the disabled community to get equal accessibility to healthcare. It is time to properly train doctors and physicians to handle diverse situations">
                 <!-- About Section Heading-->
                 <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
                 <!-- Icon Divider-->
