--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <div class="col-sm"><p>Contact Leslie Moya for more infomation on videos x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
 
-                    <div class="col-sm"><p>Contact Alaina Wilson for more infomation on facebook</p></div>
+                    <div class="col-sm"><p>Contact Alaina Wilson for more infomation on Facebook</p></div>
 
                     <div class="col-sm"><p>Contact Alex Bocchi for more infomation on inequality for people with disabilities in medicine</p></div>
 
