--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
             </div>
         </div>
         <!-- Portfolio Modal 6-->
-        <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" aria-labelledby="portfolioModal6" aria-hidden="true">
+       <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" aria-labelledby="portfolioModal6" aria-hidden="true">
             <div class="modal-dialog modal-xl">
                 <div class="modal-content">
                     <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button></div>
@@ -371,7 +371,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Title of Image 6</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Striving Toward Equity in Health Care for People With Communication Disabilities</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -379,9 +379,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/SJImage6.png" alt="..." />
+                                        <a class="btn btn-primary btn-lg" href="assets/equityinhealthcare.pdf" target="_blank" alt="...">Click here to open this PDF in a new window</a><!-- Alternatively, you can replace what the button says with the name of the article or whatever you want-->
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">This is where you will say something about the image. Try to have these six containers provide a mix of calls to action and literature to support your cause. For instance, if you can find a local organization to call/volunteer/donate/etc., you may want to put their information in one of these containers. Likewise, your image may be a phone. The title of this image may be their organization. In the space where this is all typed, you will talk about them. If they are an organization, you may include their mission statement or their spokesperson or representative image. If it is literature, be sure to include significant evidence here. You may want to pull a quote (if you do, include in-text citation) and you may want to pull a photo of scholar/speaker from the internet. Make sure it is covered under your license, especially if you have made your website public.</p>
+                                    <p class="mb-4"><br>You can also add a PDF the same way you add an image.  Just write where to find the PDF that you have uploaded and like the video and images, replace this text with what is significant about this reading. Target blank allows the PDF to open in a new window.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
