--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                                         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
-                                    <!-- Portfolio Modal - Video-->
+                                    <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="https://youtu.be/-2XZmjzP0HM" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">This is where you will say something about the image or video. Try to have these six containers provide a mix of calls to action and literature to support your cause. For instance, if you can find a local organization to call/volunteer/donate/etc., you may want to put their information in one of these containers. Likewise, your image may be a phone. The title of this image may be their organization. In the space where this is all typed, you will talk about them. If they are an organization, you may include their mission statement or their spokesperson or representative image. If it is literature, be sure to include significant evidence here. You may want to pull a quote (if you do, include in-text citation) and you may want to pull a photo of scholar/speaker from the internet. Make sure it is covered under your license, especially if you have made your website public.</p>
@@ -253,7 +253,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Video-->
-                                    <iframe width="560" height="315" src="https://youtu.be/nhrqH8xW7E0" title="What's Disability to Me?" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/nhrqH8xW7E0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">This video shows a video of a man named, Mark Riffle, who acts as a standardized patient in a wheelchair. A "standardized" patient is someone who will test doctors and other medical professionals how they will treat a real patient. Mark's goal is to make sure people with disabilities, such as himself, are treated just like other patients. Mark reccounts times in the past when he was not treated faitly by doctors because of his disability. </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
