--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                                     <!-- Portfolio Modal - Image-->
                                         <a class="btn btn-primary btn-lg" href="assets/documents/Zombies.pdf" target="_blank" alt="...">Click here to open this PDF in a new window</a><!-- Alternatively, you can replace what the button says with the name of the article or whatever you want-->
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4"><br>You can also add a PDF the same way you add an image.  Just write where to find the PDF that you have uploaded and like the video and images, replace this text with what is significant about this reading. Target blank allows the PDF to open in a new window.</p>
+                                    <p class="mb-4"><br>This article discusses various disabilities and how they are affected and mistreated by medical professionals. Many people with disabilities are neglected and denied treatment as a result from pre-existing conditions. Many people believe that disabilities revolve around the idea of the “able bodied.” This is a common misconception because a disability can also be mental. This image correlates with the article because the image represents both physical and mental disabilities. People shouldn't judge others based on physical appearance because many people suffer from invisible disabilities without others even knowing.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
