--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                                     <!-- Portfolio Modal - Video-->
                                     <iframe width="560" height="315" src="https://www.youtube.com/embed/-2XZmjzP0HM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">This video shows a video of a man named, Mark Riffle, who acts as a standardized patient in a wheelchair. A "standardized" patient is someone who will test doctors and other medical professionals how they will treat a real patient. Mark's goal is to make sure people with disabilities, such as himself, are treated just like other patients. Mark reccounts times in the past when he was not treated faitly by doctors because of his disability. </p>
+                                    <p class="mb-4">This video is about what disability discrimination is actually defined as. Disability descrimination is explained in this video as the discrimination of an individual based on the disabilities or physical/mental impairment they may suffer from. This video explains that as long as your disability or impairment is long term, 12 months of suffering or more, and prevents you from doing normal everyday activities then you will be protected from being discriminated against based on this disability. </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
