--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-sm"><p> Brodric Mulvihill x</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
+                    <div class="col-sm"><p>Contact Peyton Bomya for more information and any questions you may have regarding the attached videos</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>	Email Channing Mosher at Mosherc2@msu.edu to find resources where you can donate and help the disabled community in our healthcare system. x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
